# docka

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/entities/: container.rs  image.rs  mod.rs
src/domain/repositories/: docker_repository.rs  mod.rs
src/domain/value_objects/: container_id.rs  container_status.rs  mod.rs
src/error/: app_error.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/docker/: bollard_client.rs  mod.rs
src/ui/: app.rs  events.rs  mod.rs  styles.rs
src/ui/layouts/: mod.rs  simple_layout.rs
src/ui/widgets/: container_list.rs  mod.rs  status_bar.rs
tests/: integration_docker.rs  integration_ui.rs
tests/ui/: integration_tests.rs  mod.rs
tests/ui/widgets/: container_list_tests.rs  mod.rs
